Reduces Footnote Font Size, Fixes Map Popup Cut Off

--- a/css/countymaps.css
+++ b/css/countymaps.css
@@ -364,6 +364,7 @@ th {
 
 #prefootnote {
     padding: 15px;
+    font-size: 12px;
 }
 
 #footer-section {
